--- a/styles/Answer.module.css
+++ b/styles/Answer.module.css
@@ -1,3 +1,42 @@
 .answer {
   display: flex;
+  height: 100px;
+  margin: 10px;
+  min-width: 500px;
+  width: 80%;
+}
+.answerContent {
+  display: flex;
+  position: relative;
+  flex: 1;
+}
+.answerFront,
+.answerBack {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+.answerFront {
+  align-items: center;
+  border-radius: 12px;
+  padding: 15px;
+  color: #1a237e;
+  background-color: #fff;
+}
+.answerLetter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin-right: 20px;
+  color: yellow;
+}
+.answerValue {
+  font-size: 1.3rem;
+  font-weight: 700;
 }
