--- a/styles/Answer.module.css
+++ b/styles/Answer.module.css
@@ -24,6 +24,25 @@
   color: #1a237e;
   background-color: #fff;
 }
+.answerBack > div {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+}
+.correct {
+  background-color: #00c853;
+}
+.wrong {
+  background-color: #e44a4c;
+  color: #fff;
+}
+.correct .value,
+.wrong .value {
+  font-size: 1.5rem;
+}
 .answerLetter {
   display: flex;
   justify-content: center;
